UtahLiveDataTest/src/objects/IntegrationDetailConfig__c.object
<CustomObject>
    <description>[Business]  Integration Details Config contains the details of the Integration config</description>
    <fields>
        <fullName>ClassName__c</fullName>
        <label>ClassName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldConfig__c</fullName>
        <inlineHelpText>Provide Json conffiguration. Ex: {&quot;&lt;InputFieldName&gt;&quot;:{&quot;targetFieldName&quot;:&quot;&lt;outputFileName&gt;&quot;}
Make sure to test with JSON.deserializeUntyped(jsonStr) to verify the validity of json</inlineHelpText>
        <label>FieldConfig</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IntegrationConfig__c</fullName>
        <label>Integration Config</label>
        <referenceTo>IntegrationConfig__c</referenceTo>
        <relationshipName>IntegrationDetailsConfig</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsParent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsParent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParentField__c</fullName>
        <label>ParentField</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TargetObject__c</fullName>
        <label>TargetObject</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CFG: CSV Integration Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TargetObject__c</columns>
        <columns>ClassName__c</columns>
        <columns>IntegrationConfig__c</columns>
        <columns>IsParent__c</columns>
        <columns>ParentField__c</columns>
        <columns>IsUpdate__c</columns>
        <columns>SortOrder__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INTCD-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSV Integration Details Config</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>